--- a/css/styles.css
+++ b/css/styles.css
@@ -135,10 +135,6 @@ body {
 }
 
 
-.relative {
-  position: relative;
-}
-
 .avatar {
   width: 280px;
   /*box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);*/
@@ -167,43 +163,173 @@ figure {
 	overflow: hidden;
 }
 
-
-.views-big {
-  font-family: 'Varela Round', sans-serif;
+.info-rank-wrapper {
   position: absolute;
   right: 20px;
-  top: 5px;
-  font-size: 12px;
+  top: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.bio {
-  padding: 100px 20px;
+.info-rank {
   font-family: 'Varela Round', sans-serif;
-  font-size: 18px;
+  margin: 15px 0px 4px 0px;
+  font-size: 13px;
+  font-weight: 600;
+  color: #591C0E;
 }
 
-.bio p {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+.info-rank-sub {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  font-size: 30px;
+  margin: 0;
+  color: #591C0E;
 }
 
-/* Slide */
+.info-back {
+  position: absolute;
+  left: 13px;
+  top: -1px;
+}
+
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
 .card {
   margin: 15px;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   border: 1px solid #C7AF97;
   border-radius: 4px;
   background-color: #FFF6E9;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
+
+.card-header {
+  position: relative;
+}
+
+.card-header-info {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+
+
 .card figure img {
 	margin-left: 10px;
-	/*-webkit-transform: scale(1.5);
-	transform: scale(1.5);*/
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
-.card figure:hover img {
+.card-header:hover img {
 	margin-left: 0;
 }
+
+
+.card-bio {
+  padding: 20px;
+  /*font-family: 'Varela Round', sans-serif;*/
+  /*font-size: 18px;*/
+  display: flex;
+  flex-direction: column;
+  color: #3C4042;
+}
+
+.bio-section {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.bio-section p {
+  margin: 0;
+}
+
+
+.bio-a > :first-child {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
+.bio-a > :last-child {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 12px;
+  margin-top: 3px;
+  color: #496F80;
+}
+
+.bio-b {
+  margin: 18px 0;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 12px;
+}
+
+.bio-c > :first-child {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+}
+
+.bio-c > :last-child {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  margin-top: 2px;
+}
+
+.bio-d {
+  margin-top: 18px;
+}
+
+.bio-d > :first-child {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+}
+
+.bio-d > :last-child {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  color: #FBB773;
+}
+
+.bio-shaded {
+  background-color: #FCE9D6;
+  border: 1px solid #FADCBE;
+  padding: 6px;
+}
+
+.bio-shaded p {
+  text-shadow: rgba(255,255,255,.1) -1px -1px 1px,rgba(0,0,0,.5) 1px 1px 1px;
+  color: #3C4042;
+}
+
+/*.card-bio p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  margin: 0;
+}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*end*/
