--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 /*
 
 FADCBE - tan headshot bg
@@ -20,7 +18,6 @@ C7B59E - background of page
   box-sizing: border-box;
 }
 
-
 body {
   background-color: #C7B59E;
 }
@@ -32,6 +29,8 @@ body {
   width: 100%;
 }
 
+
+
 .header-section {
   background-color: #3C4042;
   padding: 0 30px;
@@ -39,41 +38,83 @@ body {
   flex-direction: column;
 }
 
-.main-section {
-  display: flex;
-  flex-direction: column;
-}
 
 .header-top {
   display: flex;
   justify-content: flex-end;
 }
 
-.header-bot {
+
+
+.text-menu {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row-reverse;
+  flex-direction: row;
 }
 
+.text-menu>span {
 
+}
 
+.text-menu-wrapper {
+  color: #FBB773;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+}
 
-.bigly {
-  font-size: 30px;
+.menu-pre {
+  margin-right: 10px;
+  font-size: 26px;
+  color: #fce9d6;
+}
+
+.menu-post {
+  margin-left: 10px;
   color: #FBB773;
 }
 
 
+
+.header-bot {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  /*width: 100%;*/
+}
+
+
 .text-title {
+  /*width: 30%;*/
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.text-title> :first-child {
+  margin-right: 20px;
   font-family: 'Bangers', cursive;
   font-size: 50px;
   line-height: 0.1;
   color: #FCE9D6;
-  text-shadow: rgba(255,255,255,.1) -1px -1px 1px,rgba(0,0,0,.5) 1px 1px 1px;
+  text-shadow: rgba(255, 255, 255, .1) -1px -1px 1px, rgba(0, 0, 0, .5) 1px 1px 1px;
 }
 
+.text-title > :last-child {
+  /*min-width: 15%;*/
+  /*max-width: 15%;*/
+}
 
+.text-title> :last-child > img {
+  /*width: 100%;*/
+  width: 60px;
+  height: 60px;
+}
+/*////////////////////////////////////*/
 .text-subtitle {
+  /*width: 70%;*/
   font-family: 'Varela Round', sans-serif;
   font-size: 19px;
   font-weight: 400;
@@ -90,41 +131,39 @@ body {
   cursor: pointer;
 }
 
-.text-subtitle > :first-child,
-.text-subtitle > :first-child > i
- {
+.text-subtitle> :first-child, .text-subtitle> :first-child>i {
   margin-left: 0;
   color: #FCE9D6;
 }
 
-
 .text-subtitle span i {
   margin-right: 13px;
 }
+/*/////////////////////////////////////////*/
 
-
-
-
-.text-menu {
-  display: flex;
-  flex-direction: row;
-}
-
-.text-menu > span {
-  color: #FBB773;
-}
-
-.menu-pre {
-  margin-right: 10px;
+.bigly {
   font-size: 30px;
   color: #FBB773;
 }
 
-.menu-post {
-  margin-left: 10px;
-  color: #FBB773;
-}
 
+
+
+
+
+/*
+
+MAIN SECTION
+
+*/
+
+
+
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+}
 
 .main-section-title {
   font-family: 'Varela Round', sans-serif;
@@ -134,33 +173,36 @@ body {
   color: #3C4042;
 }
 
-
 .avatar {
   width: 280px;
   /*box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);*/
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px #7A5938;
-	border-radius:4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
   /*text-align: center;*/
 }
 
 .bg-tan {
   /*background-color: #FADCBE;*/
   /*border-bottom: 1px solid #C7AF97;*/
-  background: #FFF6E9; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#FFF6E9, #FADCBE 70%); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#FFF6E9, #FADCBE 70%); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#FFF6E9, #FADCBE 70%); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#FFF6E9, #FADCBE 70%); /* Standard syntax */
+  background: #FFF6E9;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#FFF6E9, #FADCBE 70%);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#FFF6E9, #FADCBE 70%);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#FFF6E9, #FADCBE 70%);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#FFF6E9, #FADCBE 70%);
+  /* Standard syntax */
 }
 
-
 figure {
-	width: 280px;
-	height: 150px;
-	margin: 0;
-	padding: 0;
-	/*background: #fff;*/
-	overflow: hidden;
+  width: 280px;
+  height: 150px;
+  margin: 0;
+  padding: 0;
+  /*background: #fff;*/
+  overflow: hidden;
 }
 
 .info-rank-wrapper {
@@ -195,12 +237,10 @@ figure {
   top: -1px;
 }
 
-
 .card-wrapper {
   display: flex;
   flex-wrap: wrap;
 }
-
 
 .card {
   margin: 15px;
@@ -212,7 +252,6 @@ figure {
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
-
 .card-header {
   position: relative;
 }
@@ -223,17 +262,15 @@ figure {
   flex-direction: row;
 }
 
-
-
 .card figure img {
-	margin-left: 10px;
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out;
-}
-.card-header:hover img {
-	margin-left: 0;
+  margin-left: 10px;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
 }
 
+.card-header:hover img {
+  margin-left: 0;
+}
 
 .card-bio {
   padding: 20px;
@@ -254,13 +291,12 @@ figure {
   margin: 0;
 }
 
-
-.bio-a > :first-child {
+.bio-a> :first-child {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
 }
 
-.bio-a > :last-child {
+.bio-a> :last-child {
   font-family: 'Varela Round', sans-serif;
   font-size: 12px;
   margin-top: 3px;
@@ -273,13 +309,13 @@ figure {
   font-size: 12px;
 }
 
-.bio-c > :first-child {
+.bio-c> :first-child {
   font-family: 'Varela Round', sans-serif;
   font-size: 11px;
   text-transform: uppercase;
 }
 
-.bio-c > :last-child {
+.bio-c> :last-child {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   margin-top: 2px;
@@ -289,13 +325,13 @@ figure {
   margin-top: 18px;
 }
 
-.bio-d > :first-child {
+.bio-d> :first-child {
   font-family: 'Varela Round', sans-serif;
   font-size: 11px;
   text-transform: uppercase;
 }
 
-.bio-d > :last-child {
+.bio-d> :last-child {
   font-family: 'Varela Round', sans-serif;
   font-size: 30px;
   font-weight: 500;
@@ -309,27 +345,16 @@ figure {
 }
 
 .bio-shaded p {
-  text-shadow: rgba(255,255,255,.1) -1px -1px 1px,rgba(0,0,0,.5) 1px 1px 1px;
+  text-shadow: rgba(255, 255, 255, .1) -1px -1px 1px, rgba(0, 0, 0, .5) 1px 1px 1px;
   color: #3C4042;
 }
+
 
 /*.card-bio p {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin: 0;
 }*/
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /*end*/
