--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,6 @@ body {
   width: 100%;
 }
 
-
-
 .header-section {
   background-color: #3C4042;
   padding: 0 30px;
@@ -38,22 +36,17 @@ body {
   flex-direction: column;
 }
 
-
 .header-top {
   display: flex;
   justify-content: flex-end;
 }
-
-
 
 .text-menu {
   display: flex;
   flex-direction: row;
 }
 
-.text-menu>span {
-
-}
+.text-menu>span {}
 
 .text-menu-wrapper {
   color: #FBB773;
@@ -76,15 +69,12 @@ body {
   color: #FBB773;
 }
 
-
-
 .header-bot {
   display: flex;
   justify-content: space-between;
   flex-direction: row-reverse;
   /*width: 100%;*/
 }
-
 
 .text-title {
   /*width: 30%;*/
@@ -102,17 +92,17 @@ body {
   text-shadow: rgba(255, 255, 255, .1) -1px -1px 1px, rgba(0, 0, 0, .5) 1px 1px 1px;
 }
 
-.text-title > :last-child {
+.text-title> :last-child {
   /*min-width: 15%;*/
   /*max-width: 15%;*/
 }
 
-.text-title> :last-child > img {
+.text-title> :last-child>img {
   /*width: 100%;*/
   width: 60px;
   height: 60px;
 }
-/*////////////////////////////////////*/
+
 .text-subtitle {
   /*width: 70%;*/
   font-family: 'Varela Round', sans-serif;
@@ -139,16 +129,12 @@ body {
 .text-subtitle span i {
   margin-right: 13px;
 }
-/*/////////////////////////////////////////*/
 
 .bigly {
   font-size: 30px;
   color: #FBB773;
+  min-width: 25px;
 }
-
-
-
-
 
 
 /*
@@ -156,9 +142,6 @@ body {
 MAIN SECTION
 
 */
-
-
-
 
 .main-section {
   display: flex;
@@ -173,8 +156,45 @@ MAIN SECTION
   color: #3C4042;
 }
 
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  margin: 15px;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  border: 1px solid #C7AF97;
+  border-radius: 4px;
+  background-color: #FFF6E9;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card-header {
+  position: relative;
+}
+
+.card-header:hover img {
+  margin-left: 0;
+}
+
+.card-header-info {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+.card figure img {
+  margin-left: 10px;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
 .avatar {
-  width: 280px;
+  /*width: 280px;*/
+  width: 100%;
   /*box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);*/
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5) inset, 0 1px 1px #7A5938;
   border-radius: 4px 4px 0 0;
@@ -197,12 +217,19 @@ MAIN SECTION
 }
 
 figure {
-  width: 280px;
+  /*width: 280px;*/
+  width: 100%;
   height: 150px;
   margin: 0;
   padding: 0;
   /*background: #fff;*/
   overflow: hidden;
+}
+
+.info-back {
+  position: absolute;
+  left: 13px;
+  top: -1px;
 }
 
 .info-rank-wrapper {
@@ -229,47 +256,6 @@ figure {
   font-size: 30px;
   margin: 0;
   color: #591C0E;
-}
-
-.info-back {
-  position: absolute;
-  left: 13px;
-  top: -1px;
-}
-
-.card-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.card {
-  margin: 15px;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #C7AF97;
-  border-radius: 4px;
-  background-color: #FFF6E9;
-  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-.card-header {
-  position: relative;
-}
-
-.card-header-info {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-}
-
-.card figure img {
-  margin-left: 10px;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-}
-
-.card-header:hover img {
-  margin-left: 0;
 }
 
 .card-bio {
@@ -349,6 +335,120 @@ figure {
   color: #3C4042;
 }
 
+
+
+
+
+@media screen and (max-width: 1150px) {
+
+  .text-menu-wrapper {
+    font-size: 15px;
+  }
+
+  .menu-pre {
+    font-size: 22px;
+  }
+
+  .text-subtitle {
+    font-size: 17px;
+  }
+  .text-subtitle span {
+    margin-left: 25px;
+  }
+  .text-subtitle> :first-child, .text-subtitle> :first-child>i {
+
+  }
+  .text-subtitle span i {
+    margin-right: 10px;
+  }
+  .bigly {
+    font-size: 25px;
+  }
+  .text-title> :first-child {
+    margin-right: 10px;
+    font-size: 30px;
+  }
+  .text-title> :last-child {
+
+  }
+  .text-title> :last-child>img {
+    width: 35px;
+    height: 35px;
+  }
+  .main-section-title {
+    /*font-family: 'Varela Round', sans-serif;*/
+    font-size: 30px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    /*font-weight: 600;*/
+    /*margin-left: 15px;*/
+    /*color: #3C4042;*/
+  }
+
+}
+
+@media screen and (max-width: 982px) {
+
+  .text-menu {
+    margin: 20px 0 0 0;
+  }
+  .text-subtitle {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .text-subtitle span {
+    margin-left: 0;
+    margin-bottom: 5px;
+  }
+  .text-title> :first-child {
+    font-size: 40px;
+  }
+  .text-title> :last-child {
+
+  }
+  .text-title> :last-child>img {
+    width: 50px;
+    height: 50px;
+  }
+
+}
+
+
+
+@media screen and (max-width: 660px) {
+
+  .header-top {
+    position: absolute;
+    top: 0;
+    right: 25px;
+  }
+
+  .header-section {
+    flex-direction: column-reverse;
+  }
+
+  .header-bot {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+}
+
+
+@media screen and (max-width: 500px) {
+
+  .header-top {
+    position: relative;
+    /*justify-content: flex-end;*/
+  }
+
+  .header-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+
+}
 
 /*.card-bio p {
   font-family: 'Roboto', sans-serif;
